// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`launchpad: action change user name 1`] = `
Object {
  "name": undefined,
  "type": "APP_USERNAME_CHANGE",
}
`;

exports[`launchpad: action reset app 1`] = `
Object {
  "type": "APP_RESET",
}
`;

exports[`launchpad: action set error on app set 1`] = `
Object {
  "message": "Error set app",
  "type": "APP_SET_ERROR",
}
`;

exports[`launchpad: action start loading app 1`] = `
Object {
  "type": "LAUNCHPAD_LOAD",
}
`;

exports[`launchpad: action upload app failure 1`] = `
Object {
  "error": "Error uploading app",
  "type": "APP_UPLOAD_FAILURE",
}
`;

exports[`launchpad: action upload app request 1`] = `
Object {
  "formData": Object {
    "appPackage": Array [
      Object {
        "lastModified": 1510147428520,
        "name": "abc.zip",
        "size": 1725827,
        "type": "application/zip",
        "webkitRelativePath": "",
      },
    ],
    "appPassword": "security",
    "appUserAddress": "044eda43ba9c76fc36b9183c96f7a8fad8d21fe6",
    "appUsername": "Supplier2",
  },
  "type": "APP_UPLOAD_REQUEST",
}
`;

exports[`launchpad: action upload app success 1`] = `
Object {
  "type": "APP_UPLOAD_SUCCESS",
}
`;
